sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	  for (i<-0 to 150) {
	  	getValeur(i)==x;
	  	getValeur(i+1)==y;
	  	while (x>y) {
	  		setValeur(i)==y
	  	}
	  }
}


